--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>customer_page</title>
 
 </head>
@@ -20,25 +20,25 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="">
+          <input type="text" class="form-control" id="" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">E-mail</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="">
+          <input type="email" class="form-control" id="" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Contact</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="">
+          <input type="text" class="form-control" id="" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Location</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="">
+          <input type="text" class="form-control" id="" required>
         </div>
       </div>
 
@@ -46,7 +46,7 @@
 
       <div class="form-group">
         <label>Category</label>
-        <select class="form-control" id="">
+        <select class="form-control" id="" required>
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -56,7 +56,7 @@
       </div>
       <div class="form-group">
         <label>Subject</label>
-        <input type="text" class="form-control" id="">
+        <input type="text" class="form-control" id="" required>
       </div>
       <div class="form-group">
         <label >Description</label>
@@ -65,13 +65,13 @@
 
       <div class="form-group">
         <label>Choose File</label>
-        <input type="file" class="form-control-file" id="">
+        <input type="file" class="form-control-file" id="" required>
       </div>
 
       <hr />
 
       <div class="btn-group">
-        <button type="button" class="btn btn-outline-success btn-lg" name="submit">Submit</button>
+        <button type="submit" class="btn btn-outline-success btn-lg" name="submit">Submit</button>
         <input type="reset" class="btn btn-outline-danger btn-lg" name="clear" value="Clear">
       </div>
     </form>
