connect mongoDB and store data when form submitted.

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="" required>
+          <input type="text" class="form-control" name"name" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">E-mail</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="" required>
+          <input type="email" class="form-control" name="email" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Contact</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="" required>
+          <input type="text" class="form-control" name="contact" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Location</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="" required>
+          <input type="text" class="form-control" name="location" required>
         </div>
       </div>
 
@@ -46,7 +46,7 @@
 
       <div class="form-group">
         <label>Category</label>
-        <select class="form-control" id="" required>
+        <select class="form-control" name="category" required>
           <option>1</option>
           <option>2</option>
           <option>3</option>
@@ -56,16 +56,16 @@
       </div>
       <div class="form-group">
         <label>Subject</label>
-        <input type="text" class="form-control" id="" required>
+        <input type="text" name = "subject" class="form-control"  required>
       </div>
       <div class="form-group">
         <label >Description</label>
-        <textarea class="form-control" id="" rows="3"></textarea>
+        <textarea class="form-control" name="description" rows="3"></textarea>
       </div>
 
       <div class="form-group">
         <label>Choose File</label>
-        <input type="file" class="form-control-file" id="" required>
+        <input type="file" class="form-control-file" required>
       </div>
 
       <hr />
